GPv3: Start of stroke gets pulled along #120698

Closed
opened 2024-04-16 14:58:36 +02:00 by Dvorakir · 2 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.86

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-15 22:59, hash: 6fc6bcdb826f
Worked: Previous grease pencil

Short description of error
when drawing grease pencil 3.0 strokes, the start of the stroke gets "pulled along" with the rest of the stroke

Exact steps for others to reproduce the error

  1. Start drawing a stroke in a Grease Pencil 3.0 object
  2. Keep an eye on the start of the stroke
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.86 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-15 22:59, hash: `6fc6bcdb826f` Worked: Previous grease pencil **Short description of error** when drawing grease pencil 3.0 strokes, the start of the stroke gets "pulled along" with the rest of the stroke <video src="/attachments/e87a258b-c5eb-424c-b698-7b66d726a9e2" title="blender_Srdm5tmeGk.mp4" controls></video> **Exact steps for others to reproduce the error** 1. Start drawing a stroke in a Grease Pencil 3.0 object 2. Keep an eye on the start of the stroke
Dvorakir added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2024-04-16 14:58:36 +02:00
Member

Hi, thanks for the report. Can confirm.
Haven't checked the code yet but if I remember correctly, drawing code deletes overlapping/nearest points so that could be the reason of starting point got removed.

Hi, thanks for the report. Can confirm. Haven't checked the code yet but if I remember correctly, drawing code deletes overlapping/nearest points so that could be the reason of starting point got removed.
Pratik Borhade added
Module
Grease Pencil
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-04-17 05:13:32 +02:00
Pratik Borhade added this to the Grease Pencil project 2024-04-17 05:13:38 +02:00
Member

I think this is caused by a threshold value in the drawing operator: it will keep modifying the first point of the stroke until the mouse has moved further than POINT_OVERRIDE_THRESHOLD_PX (3 pixels) The effect is possibly exaggerated by the Active Smooth feature, but it looks like this threshold is the main issue.
7a8e4995c8/source/blender/editors/sculpt_paint/grease_pencil_paint.cc (L369-L374)

I think this is caused by a threshold value in the drawing operator: it will keep modifying the first point of the stroke until the mouse has moved further than `POINT_OVERRIDE_THRESHOLD_PX` (3 pixels) The effect is possibly exaggerated by the _Active Smooth_ feature, but it looks like this threshold is the main issue. https://projects.blender.org/blender/blender/src/commit/7a8e4995c8334120a336efc16f7275bd246c4c86/source/blender/editors/sculpt_paint/grease_pencil_paint.cc#L369-L374
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-24 11:54:18 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120698
No description provided.